<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary"
    tools:context=".AddTodoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="@color/color_red"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/back_button"
                android:scaleType="center"
                android:src="@drawable/ic_close"
                app:tint="@color/label_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/back_primary"
                android:text="@string/save"
                android:textColor="@color/color_blue" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:gravity="top"
                android:hint="@string/what_need_to_do" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/priority"
            style="@style/Body"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:entries="@array/Priority"
            android:foregroundTint="@color/label_tertiary"
            android:gravity="start|top" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/support_separator" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_up_to"
                    style="@style/Body"/>

                <TextView
                    android:id="@+id/deadline_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="invisible"
                    style="@style/Subhead"
                    android:textColor="@color/color_blue"/>
            </LinearLayout>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end" />

        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/support_separator" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/back_primary"
            android:drawableLeft="@drawable/delete"
            android:drawableTint="@color/color_red"
            android:gravity="start|center_vertical"
            android:text="@string/delete"
            android:textColor="@color/color_red" />

    </LinearLayout>

</FrameLayout>